examples/test/testpolicy4144.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4144
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key23: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value11
      podSelector:
        matchLabels:
          key30: value36
          key2: value15
          key29: value42
